Fix:delete space

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <span class="author-block">Shanghai Academy of AI for Science<sup>2</sup></span><br>
                     <span class="author-block">Nanjing University<sup>3</sup></span><br>
                     <span class="author-block">State Key Laboratory of Space-Ground Integrated Information Technology<sup>4</sup></span><br>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding author</small></span>
+                    <span class="eql-cntrb"><small><sup>*</sup>Corresponding author</small></span>
                   </div>
 
                   <div class="column has-text-centered">
