--- a/index.html
+++ b/index.html
@@ -111,16 +111,7 @@
                     </a>
                   </span> -->
 
-                  <!-- Github link -->
-                  <!-- <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fab fa-github"></i>
-                    </span>
-                    <span>Code (release later)</span>
-                  </a>
-                </span> -->
+                  
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
@@ -129,7 +120,17 @@
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv (release later)</span>
+                  <span>arXiv</span>
+                </a>
+              </span>
+              <!-- Github link -->
+              <span class="link-block">
+                <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                  <i class="fab fa-github"></i>
+                </span>
+                  <span>Code (Release Soon)</span>
                 </a>
               </span>
             </div>
