--- a/index.html
+++ b/index.html
@@ -286,7 +286,12 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>release later</code></pre>
+      <pre><code>@article{fan2025align,
+          title={Align Your Rhythm: Generating Highly Aligned Dance Poses with Gating-Enhanced Rhythm-Aware Feature Representation},
+          author={Fan, Congyi and Guan, Jian and Zhao, Xuanjia and Xu, Dongli and Lin, Youtian and Ye, Tong and Feng, Pengming and Pan, Haiwei},
+          journal={arXiv preprint arXiv:2503.17340},
+          year={2025}
+        }</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
