--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               </span>
               <!-- Github link -->
               <span class="link-block">
-                <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                <a href="https://github.com/fancongyi/Danceba" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="fab fa-github"></i>
