--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Align Your Rhythm: Generating Highly Aligned Dance Poses with Gating-Enhanced Rhythm-Aware Feature Representation</h1>
+            <h1 class="title is-2 publication-title">Align Your Rhythm: Generating Highly Aligned Dance Poses with Gating-Enhanced Rhythm-Aware Feature Representation</h1>
+            <div style="color: red; font-size: 16px; text-align: center; margin-top: 5px;">
+            ICCV 2025 Accept
+            </div>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
