--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-2 publication-title">Align Your Rhythm: Generating Highly Aligned Dance Poses with Gating-Enhanced Rhythm-Aware Feature Representation</h1>
-            <div style="color: red; font-size: 16px; text-align: center; margin-top: 5px;">
-            ICCV 2025 Accept
+            <div style="color: red; font-size: 24px; font-weight: bold; text-align: center; margin-top: 5px;">
+              ICCV 2025 Accept
             </div>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
