--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <span class="icon">
                   <i class="fab fa-github"></i>
                 </span>
-                  <span>Code (Release Soon)</span>
+                  <span>Code</span>
                 </a>
               </span>
             </div>
