--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Harbin Engineering University<sup>1</sup></span><br>
-                    <span class="author-block">Shanghai Academy of AI for Science<sup>2</sup></span><br>
-                    <span class="author-block">Nanjing University<sup>3</sup></span><br>
+                    <span class="author-block">College of Computer Science and Technology, Harbin Engineering University<sup>1</sup></span><br>
+                    <span class="author-block">Shanghai Academy of Artificial Intelligence for Science<sup>2</sup></span><br>
+                    <span class="author-block">School of Intelligence Science and Technology, Nanjing University<sup>3</sup></span><br>
                     <span class="author-block">State Key Laboratory of Space-Ground Integrated Information Technology<sup>4</sup></span><br>
                     <span class="eql-cntrb"><small><sup>*</sup>Corresponding author</small></span>
                   </div>
